apps/overlays/homarr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  template:
    spec:
      containers:
        - name: homarr
          resources:
            requests:
              cpu: 10m
              memory: 500M
            limits:
              memory: 500M
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /app/data/configs
            - name: icons
              mountPath: /app/public/icons
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homarr-data
        - name: config
          persistentVolumeClaim:
            claimName: homarr-config
        - name: icons
          persistentVolumeClaim:
            claimName: homarr-icons
