apps/overlays/homarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home.starsystem.dev`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
